Finished index page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./assets/images/tameshk.png" sizes="35x20">
   <link rel="stylesheet" href="./assets/css/styles.css">
   <title>Tameshk Team</title>
 </head>
@@ -12,7 +13,7 @@
     <nav>
       <img src="./assets/images/tameshk.png" alt="Tameshk" class="tameshk">
       <ul>
-        <a href="./index.html" class="nav-items"><li>HOME</li></a>
+        <a href="./index.html" class="nav-items active"><li>TEAM</li></a>
         <a href="#" class="nav-items"><li>WORK</li></a>
         <a href="#" class="nav-items"><li>DON</li></a>
         <a href="#" class="nav-items"><li>ABOUT</li></a>
@@ -20,6 +21,50 @@
       </ul>
     </nav>
     <hr>
+    <div class="members">
+      <div class="card">
+        <img src="./assets/images/persons/hadi.jpg" alt="member image" class="member-image">
+        <h3 class="member-name">Hadi Aazarnasab</h3>
+        <p class="member-type">Lider</p>
+        <p class="member-desc">Flutter and Go developer</p>
+      </div>
+      <div class="card">
+        <img src="./assets/images/persons/nima.jpg" alt="member image" class="member-image">
+        <h3 class="member-name">Nima</h3>
+        <p class="member-type">User</p>
+        <p class="member-desc">Python programmer</p>
+      </div>
+      <div class="card">
+        <img src="./assets/images/persons/shokoh.jpg" alt="member image" class="member-image">
+        <h3 class="member-name">Mohmmad Shokoheian</h3>
+        <p class="member-type">Lider</p>
+        <p class="member-desc">Python programmer - Web developer</p>
+      </div>
+    </div>
+
+    <div class="members">
+      <div class="card">
+        <img src="./assets/images/persons/adib.jpg" alt="member image" class="member-image">
+        <h3 class="member-name">Adib Shamilzadeh</h3>
+        <p class="member-type">User</p>
+        <p class="member-desc">Python programmer</p>
+      </div>
+      <div class="card">
+        <img src="./assets/images/persons/amir.jpg" alt="member image" class="member-image">
+        <h3 class="member-name">Amir Mohmmady</h3>
+        <p class="member-type">User</p>
+        <p class="member-desc">Javascript programmer</p>
+      </div>
+      <div class="card">
+        <img src="./assets/images/persons/idk.jpg" alt="member image" class="member-image">
+        <h3 class="member-name">Hassan Javadi</h3>
+        <p class="member-type">Editor</p>
+        <p class="member-desc">Python programmer - Editor</p>
+      </div>
+    </div>
+  </div>
+  <div class="footer">
+    <p>Made With <img src="./assets/ico/love.png" alt="love" class="love"> By <a href="https://github.com/sina-yeganeh" class="sina-yeganeh">Sina Yeganeh</a></p>
   </div>
 </body>
 </html>
