--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
     <nav>
       <img src="./assets/images/tameshk.png" alt="Tameshk" class="tameshk">
       <ul>
-        <a href="./index.html" class="nav-items active"><li>TEAM</li></a>
+        <a href="./index.html" class="nav-items"><li>TEAM</li></a>
         <a href="./work.html" class="nav-items"><li>WORK</li></a>
         <a href="#" class="nav-items"><li>DON</li></a>
         <a href="./about.html" class="nav-items"><li>ABOUT</li></a>
-        <a href="./contact.html" class="nav-items"><li>CONTACT</li></a>
+        <a href="./contact.html" class="nav-items active"><li>CONTACT</li></a>
       </ul>
     </nav>
     <hr>
